--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@chakra-ui/react": "^2.6.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.2",
+    "@types/mdx": "^2.0.5",
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
@@ -20,11 +24,16 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "framer-motion": "^10.12.4",
+    "gray-matter": "^4.0.3",
+    "grey-matter": "^0.0.0",
     "next": "13.3.1",
+    "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.2",
     "styled-components": "^5.3.10",
     "three": "^0.152.0",
     "typescript": "5.0.4"
